<package format="2">
  <name>dynamic_stack_decider_visualization</name>
  <version>0.2.1</version>
  <description>
    A Python GUI plugin to visualize the bitbots-dynamic-stack-decider (DSD)
    <br />
	Loosly based on rqt_graph
  </description>
  <maintainer email="7sell@informatik.uni-hamburg.de">Finn-Thorben Sell</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <author email="7sell@informatik.uni-hamburg.de">Finn-Thorben Sell</author>
  <author email="info@bit-bots.de">Hamburg Bit-Bots</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>qt_dotgraph</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rosnode</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosservice</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>dynamic_stack_decider</exec_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin_dsd_viz.xml"/>
    <bitbots_documentation>
      <status>broken</status>
      <language>python</language>
    </bitbots_documentation>
  </export>
</package>

